--- a/stories/seamstress/css/base.css
+++ b/stories/seamstress/css/base.css
@@ -4,3 +4,11 @@ body {
     font-family: "Arial", "Helvetica", "Verdana", "sans-serif";
     font-size: 12px;
 }
+
+.default_text {
+	color: #aaa;
+}
+
+#toolbar {
+	padding: 10px 4px;
+}
