--- a/tei/shakespeare/Editor/fourstore_editor.css
+++ b/tei/shakespeare/Editor/fourstore_editor.css
@@ -19,3 +19,7 @@ div#editForm { margin: 5px }
 .quote {font-style: italic}
 
 td.changed	{ color: red }
+
+.chooseCharacter	{ font-size: 135%; font-weight: bold; background-color: #fddfb1; border: 0px}
+
+#namedEntityID	{ font-style: italic; color: #777777 }
