--- a/tei/shakespeare/Editor/fourstore_editor.css
+++ b/tei/shakespeare/Editor/fourstore_editor.css
@@ -23,3 +23,5 @@ td.changed	{ color: red }
 .chooseCharacter	{ font-size: 135%; font-weight: bold; background-color: #fddfb1; border: 0px}
 
 #namedEntityID	{ font-style: italic; color: #777777 }
+
+button#saveChanges { margin-left: 200px }
