Added trait properties and created list of location types and updated css

--- a/tei/shakespeare/Editor/fourstore_editor.css
+++ b/tei/shakespeare/Editor/fourstore_editor.css
@@ -28,7 +28,7 @@ td.changed	{ color: red }
 
 button#saveChanges { margin-left: 200px }
 
-table.locationList { width: 60%; min-height: 150px; background-color: #bbb }
+table.entityList { width: 60%; min-height: 150px; background-color: #bbb }
 
 div.control { background-color: white; border: 1px solid black; margin-top: 10px; }
 
